# Auto

./: README.md  docker-compose.yml  l_docker-compose.yml
backend/: pyproject.toml  pytest.ini
backend/config/: celery.py  settings.py  urls.py
backend/executor/: admin.py  models.py
backend/executor/migrations/: 0001_initial.py
backend/prod/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/prod/migrations/: 0001_initial.py
backend/tests/: test_endpoints.py  test_models.py
backend/tests/fixtures/: fixtures.py
nginx/: nginx.conf
