[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Симонов Алексей <alxxalxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2.8"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
redis = "^5.0.1"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
